# toon-lsp

./: .gitattributes  .gitignore  .mise.toml  CHANGELOG.md  COMMERCIAL-LICENSE.txt  CONTRIBUTING.md  Cargo.toml  LICENSING.md  README.md  SECURITY.md  deny.toml  flake.nix
.cargo/: config.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-extensions.yml  ci.yml  release.yml  security.yml
benches/: comparison.rs  decoder_bench.rs
docs/: ide-support.md
docs/superpowers/plans/: 2026-07-11-toon-codec.md
docs/superpowers/sdd/: brief-task-01.md  brief-task-02.md  progress.md
docs/superpowers/sdd/reports/: task-01.md
editors/eclipse/: README.md  plugin.xml
editors/emacs/: README.md  toon-lsp.el  toon-mode.el
editors/helix/: README.md  languages.toml
editors/helix/runtime/queries/toon/: highlights.scm
editors/jetbrains/: README.md  build.gradle.kts  settings.gradle.kts
editors/jetbrains/src/main/kotlin/com/toon/lsp/: ToonElementTypes.kt  (+8 more)
editors/kate/: README.md  toon.json
editors/neovim/: README.md
editors/neovim/ftdetect/: toon.lua
editors/neovim/lua/lspconfig/configs/: toon_lsp.lua
editors/notepad++/: README.md  toon-udl.xml
editors/shared/: toon.tmLanguage.json
editors/shared/tree-sitter-toon/: grammar.js  package-lock.json  package.json
editors/shared/tree-sitter-toon/queries/: highlights.scm  injections.scm  locals.scm
editors/shared/tree-sitter-toon/src/: scanner.c
editors/shared/tree-sitter-toon/test/corpus/: basic_pairs.txt  language_features.txt  typed_values.txt
editors/sublime/: LSP-toon.sublime-settings  README.md  TOON.sublime-syntax
editors/vim/: README.md  coc-settings.json  vim-lsp-toon.vim
editors/vim/ftdetect/: toon.vim
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/src/test/: runTest.ts
editors/vscode/src/test/suite/: diagnostics.test.ts  extension.test.ts  index.ts  lsp.test.ts
editors/vscode/syntaxes/: toon.tmLanguage.json
editors/zed/: README.md  extension.toml
editors/zed/languages/toon/: config.toml  highlights.scm
examples/: token_savings.rs
scripts/: build-all-extensions.sh  bundle-binaries.sh  fetch-binaries.sh
src/: lib.rs  main.rs  resolve.rs
src/ast/: mod.rs  node.rs  span.rs
src/cli/: check.rs  convert.rs  decode.rs  diagnose.rs  encode.rs  error.rs  format.rs  graph.rs  io_utils.rs  mod.rs  symbols.rs
src/lsp/: ast_utils.rs  capabilities.rs  code_actions.rs  code_lens.rs  completion.rs  diagnostics.rs  document_highlight.rs  document_links.rs  folding.rs  formatting.rs  goto.rs  hover.rs  inlay_hints.rs  linked_editing.rs  mod.rs  references.rs  rename.rs  selection_ranges.rs  semantic_tokens.rs  server.rs  state.rs  symbols.rs  utf16.rs  workspace_symbols.rs
src/parser/: error.rs  mod.rs  scanner.rs
src/toon/: decode.rs  decode_a.rs  decode_b.rs  emit.rs  encode.rs  error.rs  fold.rs  mod.rs  verify.rs
tests/: cli_tests.rs  conformance.rs  lsp_capabilities.rs  lsp_completion.rs  lsp_diagnostics.rs  lsp_goto.rs  lsp_hover.rs  lsp_references.rs  lsp_rename.rs  lsp_state.rs  lsp_symbols.rs  parser_tests.rs  scanner_tests.rs  toon_codec_decode.rs  toon_features.rs  toon_folding.rs  toon_verify.rs
tests/cli/: check_test.rs  decode_test.rs  diagnose_test.rs  encode_test.rs  format_test.rs  graph_test.rs  mod.rs  symbols_test.rs
tests/fixtures/: array.json  invalid.toon  nested.json  nested.yaml  simple.json  simple.toon  simple.yaml
tests/fixtures/invalid/: duplicate-keys.toon  syntax-error.toon
tests/fixtures/toon_spec/decode/: arrays-nested.json  arrays-primitive.json  blank-lines.json  delimiters.json  indentation-errors.json  objects.json  path-expansion.json  primitives.json  root-form.json  validation-errors.json
tests/fixtures/valid/: arrays.toon  objects.toon  simple.toon
tests/snapshots/: .gitkeep  parser_tests__edge_cases__deep_nesting.snap  parser_tests__edge_cases__empty_input.snap  parser_tests__edge_cases__key_without_value.snap  parser_tests__error_recovery__error_recovery_missing_colon.snap  parser_tests__error_recovery__error_recovery_multiple_errors.snap  parser_tests__error_recovery__error_recovery_resumes.snap  parser_tests__expanded_arrays__dash_object_items.snap  parser_tests__expanded_arrays__dash_primitive_items.snap  parser_tests__expanded_arrays__nested_arrays.snap  parser_tests__indentation__misaligned_dedent_error.snap  parser_tests__indentation__tab_indentation_error.snap  parser_tests__inline_arrays__empty_inline_array.snap  parser_tests__inline_arrays__inline_comma_array.snap  parser_tests__inline_arrays__inline_quoted_with_commas.snap  parser_tests__objects__multiple_top_level_keys.snap  parser_tests__objects__nested_objects.snap  parser_tests__objects__simple_key_value.snap  parser_tests__primitives__bool_and_null.snap  parser_tests__primitives__number_values.snap  parser_tests__primitives__quoted_strings.snap  parser_tests__primitives__unquoted_strings.snap  parser_tests__tabular_arrays__tabular_comma.snap  parser_tests__tabular_arrays__tabular_pipe.snap  parser_tests__tabular_arrays__tabular_tab.snap  scanner_tests__arrays__array_with_multiple_items.snap  scanner_tests__arrays__dash_prefix.snap  scanner_tests__basic_tokens__brackets_and_braces.snap  scanner_tests__basic_tokens__empty_input.snap  scanner_tests__basic_tokens__single_colon.snap  scanner_tests__complex__mixed_structures.snap  scanner_tests__complex__nested_object.snap  scanner_tests__error_recovery__control_character.snap  scanner_tests__error_recovery__indentation_mismatch_error.snap  scanner_tests__error_recovery__leading_zeros_become_string.snap  scanner_tests__error_recovery__multiple_errors.snap  scanner_tests__error_recovery__scanner_continues_after_error.snap  scanner_tests__error_recovery__tab_indentation_error.snap  scanner_tests__error_recovery__unterminated_string_recovery.snap  scanner_tests__indentation__multiple_dedents.snap  (+10 more)
