[package]
name = "toon-lsp"
version = "0.1.0"
edition = "2021"
authors = ["w0wl0lxd"]
description = "Language Server Protocol implementation for TOON (Token-Oriented Object Notation)"
license = "MIT"
repository = "https://github.com/w0wl0lxd/toon-lsp"
keywords = ["toon", "lsp", "language-server", "parser", "ast"]
categories = ["development-tools", "parser-implementations"]

[lib]
name = "toon_lsp"
path = "src/lib.rs"

[[bin]]
name = "toon-lsp"
path = "src/main.rs"

[dependencies]
# LSP Framework
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4"
insta = { version = "1.34", features = ["json"] }
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
