[package]
name = "toon-lsp"
version = "0.7.1"
edition = "2024"
resolver = "3"
authors = ["w0wl0lxd"]
description = "Language Server Protocol implementation for TOON (Token-Oriented Object Notation)"
license = "AGPL-3.0-only"
repository = "https://github.com/w0wl0lxd/toon-lsp"
keywords = ["toon", "lsp", "language-server", "parser", "ast"]
categories = ["development-tools", "parser-implementations"]

[lib]
name = "toon_lsp"
path = "src/lib.rs"

[dependencies]
# TOON Format: core encode/decode only. The default `cli` feature pulls in a
# large TUI/highlighting tree (syntect→bincode, ratatui→paste, arboard, clap,
# tiktoken-rs, …) that we do not use; disabling it removes those transitive
# deps and their unmaintained-crate advisories.
toon-format = { version = "0.5", default-features = false }

# LSP Framework
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }
colored = "3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Bitflags
bitflags = "2.4"

[features]
default = []

[dev-dependencies]
pretty_assertions = "1.4"
insta = { version = "1.34", features = ["json"] }
tempfile = "3.10"
proptest = "1.4"
assert_cmd = "2"
predicates = "3"
criterion = "0.8"
toml = "1.1.2"
json5 = "1.3.1"
tiktoken-rs = "0.12.0"

[[bench]]
name = "decoder_bench"
harness = false

[[bench]]
name = "comparison"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Pedantic enforced project-wide (CI: `clippy -- -D warnings`).
# Allow-list below is deliberately minimal: high-noise or API-driven lints only.
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
default_trait_access = "allow"
float_cmp = "allow"
approx_constant = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
cast_precision_loss = "allow"                # f64 mantissa precision is acceptable for our use case
cast_possible_truncation = "allow"           # UTF-16/UTF-8 positions fit in u32 by LSP spec
doc_markdown = "allow"                       # Too noisy for identifiers in docs
uninlined_format_args = "allow"              # Readability over inline format args
manual_let_else = "allow"                    # Match pattern more readable in these cases
wildcard_imports = "allow"                   # tower_lsp lsp_types wildcard is conventional
return_self_not_must_use = "allow"           # Builder pattern doesn't require must_use
comparison_chain = "allow"                   # If-else more readable for indent logic
needless_lifetimes = "allow"                 # Explicit lifetimes for clarity
elidable_lifetime_names = "allow"            # Explicit lifetimes for documentation
unnecessary_wraps = "allow"                  # Consistent error handling interface
match_same_arms = "allow"                    # Different semantic meaning despite identical code
redundant_closure_for_method_calls = "allow" # Explicit closures for readability
collapsible_if = "allow"
collapsible_else_if = "allow"
manual_pattern_char_comparison = "allow"
map_unwrap_or = "allow"
if_same_then_else = "allow"
too_many_lines = "allow"
type_complexity = "allow"
unused_self = "allow"
field_reassign_with_default = "allow"
redundant_else = "allow"
while_let_on_iterator = "allow"
semicolon_if_nothing_returned = "allow"
used_underscore_binding = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
